[tool.poetry]
name = "uploadcare"
version = "0.1.1"
description = ""
authors = ["Alyetama <56323389+Alyetama@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
dateparser = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
